istio/networking/sdgcandidate-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sdgdemo-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: candidate
spec:
  hosts:
  - "*"
  gateways:
  - sdgdemo-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        prefix: /v1/api/sdg/demo/candidate
    route:
    - destination:
        host: candidate
        port:
          number: 9080
